Minor UI fix to avoid the button jump around

--- a/assets/sass/_page_image_detail.sass
+++ b/assets/sass/_page_image_detail.sass
@@ -62,6 +62,7 @@
       .delete-form, .update-form
         display: flex
         flex-grow: 1
+        flex-basis: 0
         input[type=submit]
           display: block
           background: #FFC107
